Remove usage of FluentIterable using the Stream API. Some usages are more verbose but OK and perhaps indicate a List should have been consumed/returned in the first place.